feat: customized from local ide

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Civil Engineer Portfolio - Professional Engineering Services</title>
+    <title>Civil Engineering Portfolio - Professional Engineering Services</title>
     <meta name="description" content="Professional civil engineer portfolio showcasing structural design, infrastructure development, and construction management expertise with 5+ years of experience." />
     <meta name="author" content="Civil Engineer" />
     <meta name="keywords" content="civil engineer, structural design, construction management, infrastructure, engineering portfolio" />
